# capclient

./: CAPMath.h  CAPModelLVPS4X4.cpp  CAPModelLVPS4X4.h  CMakeLists.txt  CmguiExtensions.h  CmguiManager.cpp  CmguiManager.h  Config.h  DICOMImage.cpp  DICOMImage.h  Doxyfile  FileSystem.cpp  FileSystem.h  ImageBrowseWindow.xrc  ImageSet.cpp  ImageSet.h  MainWindow.xrc  Makefile  README.txt  UserCommentDialog.xrc  ViewerFrame.cpp  ViewerFrame.h  ViewerFrame.xrc  header_files.cmake  main.cpp  source_files.cmake  txt_files.cmake  xrc_files.cmake
Data/: GlobalHermiteParam.com  GlobalHermiteParam.exnode  ImagePlane.exnode  LA1.exelem  LA1.exnode  LA2.exelem  LA2.exnode  LA3.exelem  LA3.exnode  SA2.exelem  SA2.exnode  SA3.exelem  SA3.exnode  SA4.exelem  SA4.exnode  SA5.exelem  SA5.exnode  SA6.exelem  SA6.exnode  adjust_brightness.com  test_1.model.exnode  test_11.model.exnode  test_12.model.exnode  test_13.model.exnode  test_14.model.exnode  test_15.model.exnode  test_16.model.exnode  test_17.model.exnode  test_18.model.exnode  test_19.model.exnode  test_2.model.exnode  test_20.model.exnode  test_21.model.exnode  test_22.model.exnode  test_23.model.exnode  test_24.model.exnode  test_25.model.exnode  test_26.model.exnode  test_27.model.exnode  test_28.model.exnode  (+8 more)
Data/HTML/: AboutCAPClient.html
Data/shaders/: fp.txt  vp.txt
Data/templates/: DataPoints.exnode  GlobalHermiteParam.exelem  ImagePreview.exelem  ImagePreview.exnode  LA1.exelem  LA1.exnode  LA10.exelem  LA10.exnode  LA11.exelem  LA11.exnode  LA12.exelem  LA12.exnode  LA2.exelem  LA2.exnode  LA3.exelem  LA3.exnode  LA4.exelem  LA4.exnode  LA5.exelem  LA5.exnode  LA6.exelem  LA6.exnode  LA7.exelem  LA7.exnode  LA8.exelem  LA8.exnode  LA9.exelem  LA9.exnode  SA1.exelem  SA1.exnode  SA10.exelem  SA10.exnode  SA11.exelem  SA11.exnode  SA12.exelem  SA12.exnode  SA13.exelem  SA13.exnode  SA14.exelem  SA14.exnode  (+48 more)
Data/templates/heart/: heart_1.model.exnode  heart_10.model.exnode  heart_11.model.exnode  heart_12.model.exnode  heart_13.model.exnode  heart_14.model.exnode  heart_15.model.exnode  heart_16.model.exnode  heart_17.model.exnode  heart_18.model.exnode  heart_19.model.exnode  heart_2.model.exnode  heart_20.model.exnode  heart_21.model.exnode  heart_22.model.exnode  heart_23.model.exnode  heart_24.model.exnode  heart_25.model.exnode  heart_26.model.exnode  heart_27.model.exnode  heart_3.model.exnode  heart_36.model.exnode  (+6 more)
cmake/: Macros.cmake
gui/: AnnotationWindow.xrc  UserCommentDialog.xrc
src/: AnnotationEditor.cpp  AnnotationEditor.h  AnnotationWindow.cpp  AnnotationWindow.h  Archiver.h  CAPAnnotationFile.cpp  CAPAnnotationFile.h  CAPBasis.h  CAPBinaryVolumeParameterDialog.h  CAPContour.cpp  CAPContour.h  CAPEulaDialog.h  CAPHtmlWindow.cpp  CAPHtmlWindow.h  CAPMaterial.cpp  CAPMaterial.h  CAPMath.h  CAPModelLVPS4X4.cpp  CAPModelLVPS4X4.h  CAPModeller.cpp  CAPModeller.h  CAPModellingMode.cpp  CAPModellingMode.h  CAPTimeSmoother.cpp  CAPTimeSmoother.h  CAPTotalLeastSquares.h  CAPTypes.h  CAPXMLFile.cpp  CAPXMLFile.h  CAPXMLFileHandler.cpp  CAPXMLFileHandler.h  CmguiExtensions.cpp  CmguiExtensions.h  CmguiImageSliceGraphics.cpp  CmguiImageSliceGraphics.h  CmguiManager.cpp  CmguiManager.h  Config.h  DICOMImage.cpp  DICOMImage.h  (+81 more)
src/cmgui/: callbacks.cpp  callbacks.h  extensions.cpp  extensions.h  sceneviewerpanel.cpp  sceneviewerpanel.h  utilities.cpp  utilities.h
src/gui/: CAPClientWindowUI.xrc  ImageBrowserWindowUI.xrc  UserCommentDialogUI.fbp  UserCommentDialogUI.xrc
src/html/: aboutcapclient.html.cmake
src/images/: capicon.xcf  capicon.xpm
src/io/: annotationfile.cpp  annotationfile.h  archivehandler.cpp  archivehandler.h  imagesource.cpp  imagesource.h  modelfile.cpp  modelfile.h  xmlfilehandler.cpp  xmlfilehandler.h
src/math/: algebra.h  basis.h  geometry.h  gmmfactory.h  timesmoother.cpp  timesmoother.h  totalleastsquares.h  vnlfactory.h
src/model/: Modeller.cpp  heart.cpp  heart.h  imodeller.h  modeller.cpp  modeller.h  modellingmode.cpp  modellingmode.h  modellingpoint.cpp  modellingpoint.h
src/templates/: frag.prog  vert.prog
src/ui/: AnnotationWindowUI.fbp  AnnotationWindowUI.xrc  CAPClientWindowUI.xrc  ImageBrowserWindowUI.fbp  ImageBrowserWindowUI.xrc  UserCommentDialogUI.fbp  UserCommentDialogUI.xrc  annotationwindowui.fbp  capclientwindowui.fbp  capclientwindowui.xrc  euladialog.h  htmlwindow.cpp  htmlwindow.h  imagebrowserwindowui.fbp  imagebrowserwindowui.xrc  logdialogui.fbp  logdialogui.xrc  usercommentdialogui.fbp  usercommentdialogui.xrc
src/utils/: debug.cpp  debug.h  filesystem.cpp  filesystem.h  misc.cpp  misc.h  time.cpp  time.h  txt2include.c
src/win32/: capclient.rc  dirent.c  linuxutils.c  linuxutils.h
src/zinc/: callbacks.cpp  callbacks.h  extensions.cpp  extensions.h  sceneviewerpanel.cpp  sceneviewerpanel.h  utilities.cpp  utilities.h
test/: CMakeLists.txt  SampleAnalysisUsingXsd.xml  SampleAnnotationFile.xml  UnitTest.cpp  UnitTestAnnotationEditor.cpp  UnitTestCAPAnnotationFile.cpp  UnitTestCAPMath.cpp  UnitTestCAPModeller.cpp  UnitTestCAPXMLFile.cpp  UnitTestDICOMImage.cpp  UnitTestFileSystem.cpp  UnitTestImageBrowser.cpp  UnitTestImageSet.cpp  UnitTestModeller.cpp  UnitTestSelfDeletion.cpp  UnitTestTotalLeastSquares.cpp  modellercapclient.h  modellercapclientwindow.h  sampleanalysisusingxsd.xml  sampleimages.xml  selfdeletion.h  selfdeletionwindow.cpp  selfdeletionwindow.h  unittestannotationeditor.cpp  unittestarchiver.cpp  unittestcapxmlfile.cpp  unittestconfigure.h.cmake  unittestdicom.cpp  unittesteuladialog.cpp  unittestfieldimage.cpp  unittestfieldimageview.cpp  unittestfilesystem.cpp  unittestgeometry.cpp  unittestheart.cpp  unittestimagebrowser.cpp  unittestimagesource.cpp  unittestlogwindow.cpp  unittestmath.cpp  unittestmodelfile.cpp  unittestmodeller.cpp  (+4 more)
test/imagedir/: 68691111.dcm
test/modelsave/: modelsave.xml
test/modelsavegp/: modelsavegp.xml
test/modelsaverv/: modelsaverv.xml
test/ui/: fieldimage.fbp  logwindow.fbp  sefldeletion.fbp  selfdeletionui.xrc  selfdeletionwindowui.xrc  testfieldimageui.xrc  testlogwindowui.xrc
(+3 files in other folders)
